# tauri-vite-app-demo

./: .commitlintrc.cjs  .env  .release-it.cjs  CHANGE_LOG.md  README.md  changelog-config.cjs  changelog-config.cjs.backup  package.json  pnpm-lock.yaml
scripts/: changelog.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: event.rs  menu.rs  tray.rs  window.rs
src/views/: HomeView.vue
